--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         I was living in Japan as a Service Missionary. However, I was forced to return home early due to COVID.
         My goal for now is to graduate from Weber and get some kind of international job connection with Japan. よろしくおねがいします。
         </p>
-        <img src="Self-Portrait.jpg" alt="Self Portrait">
+        <img src="Self-Portrait.JPG" alt="Self Portrait">
         <h2>Upcoming Projects</h2>
         <p>Stay tuned</p>
         <h6>copyright 2025 Jacob V. Cardon. All rights reserved</h6>
