--- a/index.html
+++ b/index.html
@@ -9,46 +9,8 @@
         <h1 id="header1">Jacob's Portfolio</h1>
 
         <p id="lighting">Lighting</p>
-        <script>
-        function MakeDark() {
-            document.getElementById('body').style.backgroundColor = "black";
-            document.getElementById('lighting').style.color = "red";
-            document.getElementById('lighting').style.backgroundColor = "black";
-            document.getElementById('text').style.color = "red";
-            document.getElementById('text').style.backgroundColor = "black";
-            document.getElementById('projects').style.color = "red";
-            document.getElementById('projects').style.backgroundColor = "black";
-            document.getElementById('header1').style.backgroundColor = "grey";
-            document.getElementById('header2').style.backgroundColor = "grey";
-            document.getElementById('header6').style.backgroundColor = "grey";
-        }
 
-        function MakeDefault() {
-            document.getElementById('body').style.backgroundColor = "red";
-            document.getElementById('lighting').style.color = "yellow";
-            document.getElementById('lighting').style.backgroundColor = "red";
-            document.getElementById('text').style.color = "yellow";
-            document.getElementById('text').style.backgroundColor = "red";
-            document.getElementById('projects').style.color = "yellow";
-            document.getElementById('projects').style.backgroundColor = "red";
-            document.getElementById('header1').style.backgroundColor = "gold";
-            document.getElementById('header2').style.backgroundColor = "gold";
-            document.getElementById('header6').style.backgroundColor = "gold";
-        }
-
-        function MakePink() {
-            document.getElementById('body').style.backgroundColor = "#ffb7c5";
-            document.getElementById('lighting').style.color = "#e0218a";
-            document.getElementById('lighting').style.backgroundColor = "#ffb7c5";
-            document.getElementById('text').style.color = "#e0218a";
-            document.getElementById('text').style.backgroundColor = "#ffb7c5";
-            document.getElementById('projects').style.color = "#e0218a";
-            document.getElementById('projects').style.backgroundColor = "#ffb7c5";
-            document.getElementById('header1').style.backgroundColor = "#db7093";
-            document.getElementById('header2').style.backgroundColor = "#db7093";
-            document.getElementById('header6').style.backgroundColor = "#db7093";
-        }
-        </script>
+        <script src='script.js'></script>
 
         <button onclick="MakeDark()">Dark</button>
         <button onclick="MakeDefault()">Default</button>
