--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <h2 id="header2">Upcoming Projects</h2>
 
         <p id="projects">Stay tuned</p>
+	<a href="Shape_Calculator/ShapeAreaAndVolumeCalculator.html">Shape Calcualtor</a>
 
         <h6 id="header6">copyright 2025 Jacob V. Cardon. All rights reserved</h6>
     </body>
