syncing missing files I think?

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
         <h2 id="header2">Upcoming Projects</h2>
 
-        <p id="projects">Stay tuned</p>
-		<a href="Shape_Calculator/ShapeAreaAndVolumeCalculator.html">
-			<img src="Self-Portrait.JPG">
+        <a href="Shape_Calculator/ShapeAreaAndVolumeCalculator.html">
+			<img src="ShapeCalculatorCover.png" class="projects" alt="Shape-Calculator-Link">
 		</a>
+
 
         <h6 id="header6">copyright 2025 Jacob V. Cardon. All rights reserved</h6>
     </body>
