--- a/Shape_Calculator/ShapeAreaAndVolumeCalculator.html
+++ b/Shape_Calculator/ShapeAreaAndVolumeCalculator.html
@@ -8,6 +8,10 @@
     <body>
         <h1>Shape Area and Volume Calculator</h1>
         <p>This page is dedicated to finding the Perimeter, Area and Volume of circles as well as spheres</p>
+        <a href="../index.html">
+            <button>Main Page</button>
+		</a>
+
         <h2>Circles</h2>
         <img src="images/CircleImage.png" alt="Picture-of-a-Circle"><br>
 
@@ -15,6 +19,10 @@
         <label for='radiusPInput'>Input Radius Of Circle:</label>
         <input type="number" id='radiusPInput'>
         <button onclick="calculatePerimeter()">Calculate Perimeter</button>
+        <p>The Perimeter of a circle is also known as the <strong>circumference</strong>,
+            which is the total distance covered by the boundary of the circle.
+            which can be calculated by using this formula... P = 2 * PI * r.
+        </p>
         <p id="resultP"></p>
 
 
@@ -23,6 +31,9 @@
         <label for='radiusAInput'>Input Radius of Circle:</label>
         <input type="number" id='radiusAInput'>
         <button onclick="calculateArea()">Calculate Area</button>
+        <p>The Area of a circle is the region occupied by the circle in a two-dimensional plane which is usually measured in squared units.
+            Which can be calculated by using this formula... A = PI * r^2
+        </p>
         <p id="resultA"></p>
 
         <br>
@@ -32,26 +43,32 @@
         <label for='radiusSInput'>Input Radius of Sphere:</label>
         <input type="number" id='radiusSInput'>
         <button onclick="calculateVolume()">Calculate Volume</button>
+        <p>The Volume of a sphere indicates how big/ much space the sphere takes.
+            which can be calculated by using this formula... V = 4/3 * PI * r^3
+        </p>
         <p id="resultS"></p>
 
+        <br>
+
+        <h6 id="header6">copyright 2025 Jacob V. Cardon. All rights reserved</h6>
 
         <script>
             function calculatePerimeter() {
                 const radius = document.getElementById('radiusPInput').value;
                 const perimeter = 2 * Math.PI * radius;
-                document.getElementById('resultP').innerHTML = `The perimeter of the circle is... ${perimeter.toFixed(3)}`;
+                document.getElementById('resultP').innerHTML = `The Perimeter of the Circle is... ${perimeter.toFixed(3)}`;
             }
 
             function calculateArea() {
                 const radius = document.getElementById('radiusAInput').value;
                 const area = Math.PI * radius ** 2;
-                document.getElementById('resultA').innerHTML = `The area of the circle is... ${area.toFixed(3)}`;
+                document.getElementById('resultA').innerHTML = `The Area of the Circle is... ${area.toFixed(3)}`;
             }
 
             function calculateVolume() {
                 const radius = document.getElementById('radiusSInput').value;
                 const volume = (4/3) * Math.PI * (radius ** 3);
-                document.getElementById('resultS').innerHTML = `The volume of the sphere is... ${volume.toFixed(3)}`;
+                document.getElementById('resultS').innerHTML = `The Volume of the Sphere is... ${volume.toFixed(3)}`;
             }
 
         </script>
