adding tic tac toe to the library

--- a/JanKen/Janken.html
+++ b/JanKen/Janken.html
@@ -28,12 +28,12 @@
 					case 5:
 					case 1:
 					case 7:
-						outputString += '<br>You Win!>;
+						outputString += '<br>You Win!>';
 						break;
 					case 2:
 					case 8:
 					case 3:
-						outputString += '<br>You Lose...>
+						outputString += '<br>You Lose...';
 						break;
 					default:
 						outputString += "<br>It's a tie!";
@@ -48,10 +48,10 @@
 
 				let outcome;
 				switch (value) {
-					case: 0
+					case 0:
 						outcome = 'rock';
 						break;
-					case: 1
+					case 1:
 						outcome = 'paper';
 						break;
 					case 2:
