--- a/Tic-Tac-Toe/Tic-Tac-Toe.html
+++ b/Tic-Tac-Toe/Tic-Tac-Toe.html
@@ -15,6 +15,21 @@
     <h1>Tic-Tac-Toe</h1>
     <table>
         <tr>
-            <td><button id="a1"> onclick=changeMark('a1')></button>></td>>
+            <td><button id="a1"> onclick=changeMark('a1')></button>></td>
+            <td><button id="a2"> onclick=changeMark('b1')></button>></td>
+            <td><button id="a3"> onclick=changeMark('c1')></button>></td>
+        </tr>
+        <tr>
+            <td><button id="b1"> onclick=changeMark('a2')></button>></td>
+            <td><button id="b2"> onclick=changeMark('b2')></button>></td>
+            <td><button id="b3"> onclick=changeMark('c2')></button>></td>
+        </tr>
+        <tr>
+            <td><button id="c1"> onclick=changeMark('a3')></button>></td>
+            <td><button id="c2"> onclick=changeMark('b3')></button>></td>
+            <td><button id="c3"> onclick=changeMark('c3')></button>></td>
+        </tr>
+        <!-- TODO: Complete the tic tac toe grid: -->
+    </table>
 </body>
 </html>
