--- a/Tic-Tac-Toe/Tic-Tac-Toe.html
+++ b/Tic-Tac-Toe/Tic-Tac-Toe.html
@@ -3,34 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Tic-Tac-Toe</title>
-    <script src='tic-tac-toe.js'></script>
+    <link rel="StyleSheet" href="tic-tac-toe.css">
+    <script src="ticTacToe.js" defer></script>
     <style>
         button {
-            width: 50px;
-            height: 50px;
+            width: 100px;
+            height: 100px;
         }
     </style>
 </head>
 <body>
     <h1>Tic-Tac-Toe</h1>
-    <p id="gameStatus">Mid-Game</p>
+    <p id="gameStatus">Game Traker:</p>
     <table>
         <tr>
-            <td><button id="a1" onclick=changeMark('a1')>a1</button></td>
-            <td><button id="b1" onclick=changeMark('b1')>b1</button></td>
-            <td><button id="c1" onclick=changeMark('c1')>c1</button></td>
+            <td><button id="a1" onclick=changeMark('a1')>T</button></td>
+            <td><button id="b1" onclick=changeMark('b1')>I</button></td>
+            <td><button id="c1" onclick=changeMark('c1')>C</button></td>
         </tr>
         <tr>
-            <td><button id="a2" onclick=changeMark('a2')>a2</button></td>
-            <td><button id="b2" onclick=changeMark('b2')>b2</button></td>
-            <td><button id="c2" onclick=changeMark('c2')>c2</button></td>
+            <td><button id="a2" onclick=changeMark('a2')>T</button></td>
+            <td><button id="b2" onclick=changeMark('b2')>A</button></td>
+            <td><button id="c2" onclick=changeMark('c2')>C</button></td>
         </tr>
         <tr>
-            <td><button id="a3" onclick=changeMark('a3')>a3</button></td>
-            <td><button id="b3" onclick=changeMark('b3')>b3</button></td>
-            <td><button id="c3" onclick=changeMark('c3')>c3</button></td>
+            <td><button id="a3" onclick=changeMark('a3')>T</button></td>
+            <td><button id="b3" onclick=changeMark('b3')>O</button></td>
+            <td><button id="c3" onclick=changeMark('c3')>E</button></td>
         </tr>
     </table>
-    <button id="restartButton" onclick="restartGame()">Restart</button>
+    <button id="StartButton" onclick="resetGame()">Start New Game</button>
 </body>
 </html>
