--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <a href="Shape_Calculator/ShapeAreaAndVolumeCalculator.html">
 			<img src="ShapeCalculatorCover.png" class="projects" alt="Shape-Calculator-Link">
 		</a>
+        <a href="Tic-Tac-Toe/Tic-Tac-Toe.html">
+			<img src="TicTacToeCover.jpg" class="projects" alt="Tic-Tac-Toe-Link">
+		</a>
 
 
         <h6 id="header6">copyright 2025 Jacob V. Cardon. All rights reserved</h6>
