fixing where reset button appears

--- a/Tic-Tac-Toe/Tic-Tac-Toe.html
+++ b/Tic-Tac-Toe/Tic-Tac-Toe.html
@@ -15,7 +15,7 @@
 <body>
     <h1>Tic-Tac-Toe</h1>
     <a href="../index.html">
-        <button class="center">Main Page</button>
+        <button id="homeButton" class="center">Main Page</button>
     </a>
     <p id="gameStatus">Game Traker:</p>
     <table class="center">
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <h6 id="header6">copyright 2025 Jacob V. Cardon. All rights reserved</h6>
 
 </body>
