--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <a href="Tic-Tac-Toe/Tic-Tac-Toe.html">
 			<img src="TicTacToeCover.jpg" class="projects" alt="Tic-Tac-Toe-Link">
 		</a>
+        <a href="ArithmeticMeanCalculator/ArithMeanCalc.html">
+			<img src="arithmetic-mean-calculator.jpg" class="projects" alt="Arithmetic-Mean-Calculator-Link">
+		</a>
 
 
         <h6 id="header6">copyright 2025 Jacob V. Cardon. All rights reserved</h6>
