adding memory match game and photos

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         <a href="ArithmeticMeanCalculator/ArithMeanCalc.html">
 			<img src="arithmetic-mean-calculator.jpg" class="projects" alt="Arithmetic-Mean-Calculator-Link">
 		</a>
+        <a href="MemoryMatch/memoryMatch.html">
+			<img src="MemoryMatchGameCover.jpg" class="projects" alt="Memory-Match-Game-Link">
+		</a>
+
 
 
         <h6 id="header6">copyright 2025 Jacob V. Cardon. All rights reserved</h6>
