--- a/MemoryMatch/memoryMatch.html
+++ b/MemoryMatch/memoryMatch.html
@@ -30,8 +30,22 @@
             text-align: center;
         }
 
-        h1 {
+        h1, h6 {
             background-color: gold;
+        }
+
+        button {
+            border: 3px solid black;
+            background-color: red;
+            color: gold;
+        }
+
+        #gameBoard {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
     </style>
 </head>
@@ -44,6 +58,8 @@
     <div id='gameBoard'></div>
 
     <script src='MemMatch.js'></script>
+
+    <h6 id="header6">copyright 2025 Jacob V. Cardon. All rights reserved</h6>
 
 </body>
 </html>
