--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
 </head>
     <body id="body">
         <h1 id="header1">Jacob's Portfolio</h1>
-
-        <p id="lighting">Lighting</p>
-
         <script src='script.js'></script>
 
+        <p id="lighting">Lighting:
         <button onclick="MakeDark()">Dark</button>
         <button onclick="MakeDefault()">Default</button>
         <button onclick="MakePink()">Barbie</button>
+        </p>
 
         <p id="text">Hello, my name is Jacob Cardon.
         I am a student at Weber State University right now and have been attending Weber since Fall of 2020.
