syncing Mastermind game to portfolio

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <a href="MemoryMatch/memoryMatch.html">
 			<img src="MemoryMatchGameCover.jpg" class="projects" alt="Memory-Match-Game-Link">
 		</a>
+        <a href="MasterMind/mastermind_with_errors.html">
+			<img src="MasterMindCover.jpg" class="projects" alt="MasterMind-Game-Link">
+		</a>
 
 
 
