made MasterMind more visually appealling

--- a/MasterMind/mastermind_with_errors.html
+++ b/MasterMind/mastermind_with_errors.html
@@ -15,6 +15,19 @@
 				margin-top: 0px;
 				margin-bottom: 0px
 			}
+
+			body {
+    			background-image: url('psyduck.jpg');
+    			background-size: cover;
+    			background-repeat: no-repeat;
+    			background-positioning: center;
+    			background-attachment: fixed;
+    			text-align: center;
+			}
+
+			#pastGuesses {
+				text-align: left;
+			}
 		</style>
 	</head>
 	<body>
