DOM Puzzles project made and linked to main page with a picture

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         <a href="MasterMind/mastermind_with_errors.html">
 			<img src="MasterMindCover.jpg" class="projects" alt="MasterMind-Game-Link">
 		</a>
+        <a href="DOM/DOMPuzzle.html">
+			<img src="DOMPuzzles.jpg" class="projects" alt="DOM-Puzzle-Link">
+		</a>
 
 
 
