--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
         <a href="DOM/DOMPuzzle.html">
 			<img src="DOMPuzzles.jpg" class="projects" alt="DOM-Puzzle-Link">
 		</a>
+		<a href="CommentForm/CommentSubmissionForm.html">
+			<img src="Comment.jpg" class="projects" alt="Comment-Submission-Form-Link">
+		</a>
+
 
 
 
