syncing in API TODO List files (HTML, JS, Cover Photo) before turning in

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 		<a href="CommentForm/CommentSubmissionForm.html">
 			<img src="Comment.jpg" class="projects" alt="Comment-Submission-Form-Link">
 		</a>
+        <a href="TODOList/APITodoList.html">
+			<img src="AOT-API-Cover.jpg" class="projects" alt="API-TODO-List-Link">
+		</a>
 
 
 
