syncing Media Collection files with a link to the main page.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <a href="TODOList/APITodoList.html">
 			<img src="AOT-API-Cover.jpg" class="projects" alt="API-TODO-List-Link">
 		</a>
+        <a href="MediaCollection/MediaCollection.html">
+			<img src="Otaku.jpg" class="projects" alt="Anime-Media-Collection-Link">
+		</a>
 
 
 
